src/test/deca/syntax/valid/parser/literal.deca
// Description:
//    Test du non terminal literal.
//
// Resultats:
//    ok

{
    boolean a = true;
    boolean b = false;
}
