src/test/deca/syntax/invalid/parser/int-large.deca
// Description:
//    Test invalide du parser.
//
// Resultats:
//    erreur ligne 8

{
    int a = 2345523657865432456;
}
